# Besek_Robot_X1

./: .gitignore  README.md
2.Software/ROS2_package/xiaobei_X1_ws/src/pkg_robot_model/: CMakeLists.txt  package.xml
2.Software/ROS2_package/xiaobei_X1_ws/src/pkg_robot_model/config/: joint_names_pkg_robot_model.yaml  my_controllers.yaml
2.Software/ROS2_package/xiaobei_X1_ws/src/pkg_robot_model/launch/: display.launch.py  gazebo.launch.py  real_robot.launch.py
2.Software/ROS2_package/xiaobei_X1_ws/src/pkg_robot_model/meshes/: L2.STL  L4.STL  L5.STL  R53.STL  R55.STL  R56.STL  R57.STL  camera_Hand_L1.STL  camera_Hand_R1.STL  camera_head_B1.STL
2.Software/ROS2_package/xiaobei_X1_ws/src/pkg_robot_model/urdf/: pkg_robot_model.csv  pkg_robot_model.urdf  pkg_robot_model.urdf.xacro  red_box.urdf
2.Software/ROS2_package/xiaobei_X1_ws/src/pkg_robot_model/worlds/: clean_room.world
2.Software/ROS2_package/xiaobei_X1_ws/src/pkg_robot_model_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
2.Software/ROS2_package/xiaobei_X1_ws/src/pkg_robot_model_moveit_config/config/: joint_limits.yaml  moveit_controllers.yaml  pkg_robot_model.srdf  ros2_controllers.yaml
2.Software/ROS2_package/xiaobei_X1_ws/src/xiaobei_arms/: package.xml  setup.cfg  setup.py
2.Software/ROS2_package/xiaobei_X1_ws/src/xiaobei_arms/launch/: master_arms.launch.py  master_with_rviz.launch.py  slave_arms.launch.py
2.Software/ROS2_package/xiaobei_X1_ws/src/xiaobei_arms/xiaobei_arms/: joint_state_bridge.py  master_arm_publisher.py  servo_interface.py  slave_arm_subscriber.py  trajectory_action_server.py
2.Software/ROS2_package/xiaobei_X1_ws/src/xiaobei_hardware/: CMakeLists.txt  package.xml  xiaobei_hardware.xml
2.Software/ROS2_package/xiaobei_X1_ws/src/xiaobei_hardware/include/xiaobei_hardware/: xiaobei_hardware_interface.hpp
2.Software/ROS2_package/xiaobei_X1_ws/src/xiaobei_hardware/src/: xiaobei_hardware_interface.cpp
2.Software/ROS2_package/xiaobei_X1_ws/src/xiaobei_voice/: package.xml  setup.cfg  setup.py
2.Software/python_package/xiaobei_X1_python/RetinaFace/: face_yolo_track.py
2.Software/python_package/xiaobei_X1_python/RetinaFace/face_yolov8n/: .mdl  .msc
2.Software/python_package/xiaobei_X1_python/human_mimic_demo/: mimic_human_pose_V2.py  pose_estimation.py  requirements.txt  run.sh
2.Software/python_package/xiaobei_X1_python/xiaobei_GUI/: robot_control_main.py
2.Software/python_package/xiaobei_X1_python/xiaobei_GUI_V2/: pure_voice_robot.py  robot_os_ultimate_v2.py
2.Software/python_package/xiaobei_X1_python/xiaobei_GUI_V2/RetinaFace/: face_yolo_track.py
2.Software/python_package/xiaobei_X1_python/xiaobei_GUI_V2/actions/: 传球.json  右手剪刀.json  打招呼.json  抓取.json  投篮.json  比心.json  跳舞.json
2.Software/python_package/xiaobei_X1_python/xiaobei_GUI_V2/human_mimic_demo/: id54_follow.py  mimic_human_pose_V2.py  servo_controller.py
2.Software/python_package/xiaobei_X1_python/xiaobei_GUI_V2/meshes/: L1.STL  L3.STL  L6.STL  L7.STL  R51.STL  R52.STL  R54.STL  base_link_0.STL  camera_head_A1.STL  camera_head_A2.STL  head_101.STL  head_102.STL
2.Software/python_package/xiaobei_X1_python/xiaobei_voice/: pure_voice_robot.py
2.Software/python_package/xiaobei_X1_python/xiaobei_voice/actions/: 展示自由度.json  拥抱.json  握手.json
3.Docs/: python_Start_Guide.md
3.Docs/01_Environment/: 01_Environment.docx  README.md
3.Docs/02_DualArm_Ctrl/: 02_DualArm_Ctrl.docx  README.md
3.Docs/03_Simulation/: 03_Simulation.docx  README.md
(+13 files in other folders)
