<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>xiaobei_arms</name>
  <version>0.0.1</version>
  <description>
    ROS2 功能包：小贝双臂协同控制系统。
    支持主控机器人通过 WiFi 发布左右臂舵机角度，从控机器人实时接收并同步动作。
    适配飞特 Feetech STS/SCS 系列舵机与 URT-1 控制器，支持主从多机协同运动。
  </description>

  <maintainer email="dev@xiaobei.ai">Beisek Robotics</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>  <buildtool_depend>ament_python</buildtool_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>